--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ahkstrategies-deploy-wrapper",
   "version": "1.0.0",
   "scripts": {
-    "build": "unzip -o ahkstrategies.zip && cd ahkstrategies && npm run build"
+    "build": "unzip -o ahkstrategies.zip && cd ahkstrategies && npm run build",
     "start": "cd ahkstrategies && npm start"
   }
 }
