--- a/ahkstrategies/ahkstrategies/package.json
+++ b/ahkstrategies/ahkstrategies/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "description": "Bilingual, deals‑first corporate website for AHKStrategies built with Next.js 14 and Tailwind CSS.",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "autoprefixer": "10.4.21",
-    "next": "14.0.4",
+    "next": "^14.2.33",
     "next-intl": "3.2.1",
+    "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -21,7 +22,6 @@
     "@types/node": "20.11.9",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
     "typescript": "5.3.3"
   }
