--- a/ahkstrategies/ahkstrategies/tsconfig.json
+++ b/ahkstrategies/ahkstrategies/tsconfig.json
@@ -10,20 +10,23 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
+    "strict": false,
+    "noImplicitAny": false,
+    "noImplicitReturns": false,
+    "noImplicitThis": false,
+    "forceConsistentCasingInFileNames": false,
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
     "incremental": true,
-    "types": [
-      "node",
-      "@types/react",
-      "@types/react-dom"
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"
     ],
+    "types": ["node"],
     "plugins": [
       {
         "name": "next"
@@ -34,7 +37,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "src/types/**/*.d.ts"
   ],
   "exclude": [
     "node_modules"
